--- a/i18n/zh-tw.toml
+++ b/i18n/zh-tw.toml
@@ -7,7 +7,7 @@
 [index_blog_latestPosts]
     other = "最新文章"
 [index_blog_allPosts]
-    other = "所有文章"
+    other = "點此查看更多信息"
 [index_blog_readMore]
     other = "閱讀全文"
 [index_currentTime]
